# rag-sanitizer

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  PLAN.md  README.md  UPDATE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  PROJECT.md  RELEASE.md  ROADMAP.md  SECURITY.md
examples/: chunks.jsonl  rules.default.json
src/rag_sanitizer/: cli.py  sanitizer.py
tests/: test_cli.py  test_sanitizer.py
